       will be applied to all other PMD thread cores.'pmd-sleep-show' is
       updated to show the maximum sleep for each PMD thread core.
     * The userspace conntrack module no longer requires the user to specify
       connection helpers in all flow rules. Instead, the helper specified
       during connection commit will be used by default.
   - DPDK:
     * Add support for DPDK 23.11.

Known issues:
   - DPDK: v23.11 has a change in behavior in handling i40e VF devices. This
     may block and prevent OVS from adding such devices as ports in a netdev
     datapath bridge.
     For the details, see https://bugs.dpdk.org/show_bug.cgi?id=1337 which
     describes the issue first detected in the 21.11 LTS branch.


v3.2.0 - 17 Aug 2023
--------------------
   - OVSDB:
     * Changed format in which ovsdb schema conversion operations are stored in
       clustered database files.  Such operations are now allowed to contain
       the bare schema (without data).  This allows to significantly improve
       the schema conversion performance.
       New ovsdb-server process will be able to read old database format, but
       old processes will *fail* to read database created by the new one, if
       conversion operation is present.  For the cluster service model follow
       upgrade instructions in 'Upgrading from version 3.1 and earlier to 3.2
       and later' section of ovsdb(7).
     * When ovsdb-server is running in relay mode, the probe interval is
       now configurable via 'ovsdb-server/set-relay-source-probe-interval'
       unixctl command.
   - IPFIX template and statistics intervals can now be configured through two
     new options in the IPFIX table: 'template_interval' and 'stats_interval'.
   - Linux kernel datapath:
     * OVS now collects per-interface upcall statistics that can be obtained
       via 'ovs-appctl dpctl/show -s' or the interface's statistics column
       in OVSDB.  Available with upstream kernel 6.2+.